# market-data-adapters

./: .gitignore  CMakeLists.txt  README.md
src/: MarketDataAdapters.cpp
